# agent_data_duckdb

./: .copilot-instructions.md  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  REPORT.md  duckdb-release.toml  plan.md
.github/workflows/: MainDistributionPipeline.yml  duckdb-next-compat.yml  duckdb-release-monitor.yml
claude_code_ext/: CMakeLists.txt  Makefile
claude_code_ext/src/: capi_quack.c  conversations.c  file_utils.c  history.c  plans.c  stats.c  todos.c
docs/: COPILOT_FILE_SCHEMAS.md  COPILOT_FILE_STRUCTURE.md  description.yml
examples/explorer/: README.md  app.py  db.py  pyproject.toml
examples/marimo/: README.md  explore.py  pyproject.toml
examples/tui/: .gitignore  Makefile  README.md  pyproject.toml
examples/tui/agent_chronicle/: __init__.py  __main__.py  app.py  constants.py  db.py  theme.tcss  themes.py
examples/tui/agent_chronicle/screens/: browser.py  overview.py  sql.py
examples/tui/tests/: conftest.py  test_browser.py  test_db.py  test_navigation.py  test_overview.py  test_sql.py
scripts/: community_extension_pr_body_template.md  duckdb_metadata_version.py  prepare_community_extension_pr.py  smoke_duckdb_release.py  smoke_test.sh  test_duckdb_metadata_version.py  update_duckdb_release.py  validate_duckdb_release.sh  verify.sh  verify_community_publication.py
src/: conversations.rs  detect.rs  history.rs  lib.rs  plans.rs  stats.rs  todos.rs  types.rs  utils.rs  vtab.rs
test/sql/: claude_desktop_conversations.test  claude_subagents.test  test_conversations.sql  test_cross_source.sql  test_history.sql  test_plans.sql  (+3 more)
(+9 files in other folders)
