[project]
name = "agent-chronicle-tui"
version = "0.1.0"
description = "Terminal UI for exploring AI coding agent session data via the agent_data DuckDB extension"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "duckdb>=1.4",
    "pandas>=2.0",
]

[project.scripts]
agent-chronicle = "agent_chronicle.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_chronicle"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
